added fonts folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Project_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Project_1 main.cpp Position.cpp Position.h Element.cpp Element.h Classes.cpp Classes.h Player.cpp Player.h Obstacle.cpp Obstacle.h Item.cpp Item.h Carte.cpp Carte.h PlayerTexture.cpp PlayerTexture.h CarteTexture.cpp CarteTexture.h ObstacleTexture.cpp ObstacleTexture.h Loot.cpp Loot.h LootTexture.cpp LootTexture.h ElementTexture.cpp ElementTexture.h Decoration.cpp Decoration.h DecorationTexture.cpp DecorationTexture.h)
+add_executable(Project_1 main.cpp Position.cpp Position.h Element.cpp Element.h Classes.cpp Classes.h Player.cpp Player.h Obstacle.cpp Obstacle.h Item.cpp Item.h Carte.cpp Carte.h PlayerTexture.cpp PlayerTexture.h CarteTexture.cpp CarteTexture.h ObstacleTexture.cpp ObstacleTexture.h Loot.cpp Loot.h LootTexture.cpp LootTexture.h ElementTexture.cpp ElementTexture.h Decoration.cpp Decoration.h DecorationTexture.cpp DecorationTexture.h PlayerStatTexture.cpp PlayerStatTexture.h)
